[ST-143] refactoring: 가게 테스트 코드 리팩토링 iii